unpackaged/main/default/objects/hed__Application__c/fields/Admission_Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>Admission_Campus_Code__c</fullName>
    <label>Admission Campus Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIA</fullName>
                <label>Hialeah</label>
            </value>
            <value>
                <fullName>HOME</fullName>
                <label>Homestead</label>
            </value>
            <value>
                <fullName>IAC</fullName>
                <label>Padron</label>
            </value>
            <value>
                <fullName>KENDL</fullName>
                <label>Kendall</label>
            </value>
            <value>
                <fullName>MEDI</fullName>
                <label>Medical</label>
            </value>
            <value>
                <fullName>NORTH</fullName>
                <label>North</label>
            </value>
            <value>
                <fullName>VIRTU</fullName>
                <label>MDC Online</label>
            </value>
            <value>
                <fullName>WEST</fullName>
                <label>West</label>
            </value>
            <value>
                <fullName>WOLF</fullName>
                <label>Wolfson</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>