unpackaged/main/default/objects/hed__Application__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <externalId>true</externalId>
    <label>Application ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>