unpackaged/main/default/objects/hed__Application__c/fields/Days_since_last_Status_update__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_Status_update__c</fullName>
    <description>Calculate number of days between today and last status change date.</description>
    <formula>TODAY() -  DATEVALUE(Last_Status_Update__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last Status update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>