unpackaged/main/default/objects/hed__Application__c/fields/hed__Application_Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Application_Status__c</fullName>
    <description>The status of the application process.</description>
    <inlineHelpText>The status of the application process.</inlineHelpText>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Info</fullName>
                <default>true</default>
                <label>Personal Info</label>
            </value>
            <value>
                <fullName>Start Term</fullName>
            </value>
            <value>
                <fullName>Campus / Location</fullName>
            </value>
            <value>
                <fullName>Program/Major</fullName>
            </value>
            <value>
                <fullName>Academic History</fullName>
            </value>
            <value>
                <fullName>Ready to Submit</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>