unpackaged/main/default/objects/hed__Application__c/fields/Last_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Update__c</fullName>
    <description>Date of last Status (Train Stop) update</description>
    <inlineHelpText>Date of last Status (Train Stop) update</inlineHelpText>
    <label>Last Status Update</label>
    <type>DateTime</type>
</CustomField>