unpackaged/main/default/objects/hed__Application__c/fields/School_Code__c.field-meta.xml
<CustomField>
    <fullName>School_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Current Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (School Code)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>