unpackaged/main/default/objects/hed__Application__c/fields/School_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>School_Graduation_Date__c</fullName>
    <label>School Graduation Date</label>
    <type>Date</type>
</CustomField>