unpackaged/main/default/objects/hed__Application__c/fields/traa_Applicant_Facing_Status__c.field-meta.xml
<CustomField>
    <fullName>traa_Applicant_Facing_Status__c</fullName>
    <description>This field is to show the status of the application to the applicant (In case they are accepted or rejected but you do not want them to know the decision yet)</description>
    <inlineHelpText>This field is to show the status of the application to the applicant (In case they are accepted or rejected but you do not want them to know the decision yet)</inlineHelpText>
    <label>Applicant Facing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Info</fullName>
                <default>true</default>
                <label>Personal Info</label>
            </value>
            <value>
                <fullName>Start Term</fullName>
            </value>
            <value>
                <fullName>Campus / Location</fullName>
            </value>
            <value>
                <fullName>Program/Major</fullName>
            </value>
            <value>
                <fullName>Academic History</fullName>
            </value>
            <value>
                <fullName>Ready to Submit</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Accepted Offer</fullName>
                <isActive>false</isActive>
                <label>Accepted Offer</label>
            </value>
            <value>
                <fullName>Declined Offer</fullName>
                <isActive>false</isActive>
                <label>Declined Offer</label>
            </value>
            <value>
                <fullName>Deferred Offer</fullName>
                <isActive>false</isActive>
                <label>Deferred Offer</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <isActive>false</isActive>
                <label>In Review</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <isActive>false</isActive>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Offered</fullName>
                <isActive>false</isActive>
                <label>Offered</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Waitlist</fullName>
                <isActive>false</isActive>
                <label>Waitlist</label>
            </value>
            <value>
                <fullName>What</fullName>
                <isActive>false</isActive>
                <label>What</label>
            </value>
            <value>
                <fullName>When</fullName>
                <isActive>false</isActive>
                <label>When</label>
            </value>
            <value>
                <fullName>Where</fullName>
                <isActive>false</isActive>
                <label>Where</label>
            </value>
            <value>
                <fullName>Who</fullName>
                <isActive>false</isActive>
                <label>Who</label>
            </value>
            <value>
                <fullName>Why</fullName>
                <isActive>false</isActive>
                <label>Why</label>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
                <isActive>false</isActive>
                <label>Withdrawn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>