unpackaged/main/default/objects/hed__Application__c/fields/traa_Application_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>traa_Application_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who edits Application score</description>
    <inlineHelpText>User who edits Application score</inlineHelpText>
    <label>Application Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>traa_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>