unpackaged/main/default/objects/hed__Application__c/fields/traa_Enrollment_Deadline__c.field-meta.xml
<CustomField>
    <fullName>traa_Enrollment_Deadline__c</fullName>
    <description>The enrollment deadline for the applicant. This field will display in the important dates component.</description>
    <inlineHelpText>The enrollment deadline for the applicant. This field will display in the important dates component.</inlineHelpText>
    <label>Enrollment Deadline</label>
    <type>Date</type>
</CustomField>