unpackaged/main/default/objects/hed__Application__c/fields/traa_Essay_1__c.field-meta.xml
<CustomField>
    <fullName>traa_Essay_1__c</fullName>
    <description>Captures the first essay question on an application. See the application for the full essay instructions.</description>
    <inlineHelpText>Captures the first essay question on an application. See the application for the full essay instructions.</inlineHelpText>
    <label>Essay 1</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>