unpackaged/main/default/objects/hed__Application__c/fields/traa_Essay_2__c.field-meta.xml
<CustomField>
    <fullName>traa_Essay_2__c</fullName>
    <description>Captures the second essay question on an application. See the application for the full essay instructions.</description>
    <inlineHelpText>Captures the second essay question on an application. See the application for the full essay instructions.</inlineHelpText>
    <label>Essay 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>