unpackaged/main/default/objects/hed__Application__c/fields/traa_If_so_what_year__c.field-meta.xml
<CustomField>
    <fullName>traa_If_so_what_year__c</fullName>
    <description>In which year you applied to our university?</description>
    <inlineHelpText>In which year you applied to our university?</inlineHelpText>
    <label>If so what year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>