unpackaged/main/default/objects/hed__Application__c/fields/traa_Level__c.field-meta.xml
<CustomField>
    <fullName>traa_Level__c</fullName>
    <formula>TEXT( hed__Applying_To__r.traa_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>traa_Level</label>
    <type>Text</type>
</CustomField>