unpackaged/main/default/objects/hed__Application__c/fields/traa_Number_of_Received_References__c.field-meta.xml
<CustomField>
    <fullName>traa_Number_of_Received_References__c</fullName>
    <description>Total Number of references received</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Number of references received</inlineHelpText>
    <label>Number of Received References</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>