unpackaged/main/default/objects/hed__Application__c/fields/traa_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>traa_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity Record</description>
    <inlineHelpText>Lookup to Opportunity Record</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>traa_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>