unpackaged/main/default/objects/hed__Application__c/fields/traa_Prerequisite_1__c.field-meta.xml
<CustomField>
    <fullName>traa_Prerequisite_1__c</fullName>
    <description>Field Used to Capture the first prerequisite for a academic program.</description>
    <label>Prerequisite 1</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>