unpackaged/main/default/objects/hed__Application__c/fields/traa_Prerequisite_2__c.field-meta.xml
<CustomField>
    <fullName>traa_Prerequisite_2__c</fullName>
    <description>Field Used to Capture the second prerequisite for a academic program.</description>
    <label>Prerequisite 2</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>