unpackaged/main/default/objects/hed__Application__c/fields/traa_Prerequisite_3__c.field-meta.xml
<CustomField>
    <fullName>traa_Prerequisite_3__c</fullName>
    <description>Field Used to Capture the third prerequisite for a academic program.</description>
    <label>Prerequisite 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>