unpackaged/main/default/objects/hed__Application__c/fields/traa_Previously_appliedTo_our_university__c.field-meta.xml
<CustomField>
    <fullName>traa_Previously_appliedTo_our_university__c</fullName>
    <description>Have you previously applied to our university?</description>
    <inlineHelpText>Have you previously applied to our university?</inlineHelpText>
    <label>Previously applied to our university</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>