unpackaged/main/default/objects/hed__Application__c/fields/traa_Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>traa_Progress_Percentage__c</fullName>
    <description>Application progress percentage based on required items total and required items remaining.</description>
    <formula>traa_Required_Items_Completed__c /  traa_Required_Items_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Application progress percentage based on required items total and required items remaining.</inlineHelpText>
    <label>Progress Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>