unpackaged/main/default/objects/hed__Application__c/fields/traa_Publish_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_Publish_Decision_Date__c</fullName>
    <description>Used to identify the academic program this  year is apart of.</description>
    <formula>hed__Applying_To__r.traa_Publish_Decision_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to identify the academic program this  year is apart of.</inlineHelpText>
    <label>Publish Decision Date</label>
    <type>Date</type>
</CustomField>