unpackaged/main/default/objects/hed__Application__c/fields/traa_Reference_Deadline__c.field-meta.xml
<CustomField>
    <fullName>traa_Reference_Deadline__c</fullName>
    <description>Deadline of Referee to submit response</description>
    <inlineHelpText>Deadline of Referee to submit response</inlineHelpText>
    <label>Reference Deadline</label>
    <type>Date</type>
</CustomField>