unpackaged/main/default/objects/hed__Application__c/fields/traa_Required_Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>traa_Required_Items_Completed__c</fullName>
    <description>Total number of required items completed for the application</description>
    <formula>traa_Required_Items_Total__c  -  traa_Required_Items_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of required items completed for the application</inlineHelpText>
    <label>Required Items Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>