unpackaged/main/default/objects/hed__Application__c/fields/traa_Required_Items_Total__c.field-meta.xml
<CustomField>
    <fullName>traa_Required_Items_Total__c</fullName>
    <description>Total number of items required for the application</description>
    <inlineHelpText>Total number of items required for the application</inlineHelpText>
    <label>Required Items Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>