unpackaged/main/default/objects/hed__Application__c/fields/traa_Scholarship_Essay__c.field-meta.xml
<CustomField>
    <fullName>traa_Scholarship_Essay__c</fullName>
    <description>This field stores scholarship essay related to the application</description>
    <inlineHelpText>Provided scholarship essay related to the application</inlineHelpText>
    <label>Scholarship Essay</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>