unpackaged/main/default/objects/hed__Application__c/fields/traa_Score__c.field-meta.xml
<CustomField>
    <fullName>traa_Score__c</fullName>
    <description>The Score of the application</description>
    <inlineHelpText>The Score of the application</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>