unpackaged/main/default/objects/hed__Application__c/fields/traa_Secondary_Program_Applying_To__c.field-meta.xml
<CustomField>
    <fullName>traa_Secondary_Program_Applying_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>In case of Dual Degree, it represent the dual degree secondary academic program or  major the applicant is applying to</inlineHelpText>
    <label>Secondary Program Applying To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Secondary Program Applying To)</relationshipLabel>
    <relationshipName>traa_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>