unpackaged/main/default/objects/hed__Application__c/fields/traa_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_Submission_Date__c</fullName>
    <description>Submission Date and Time of the Application</description>
    <inlineHelpText>Submission Date and Time of the Application</inlineHelpText>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>