unpackaged/main/default/objects/hed__Application__c/fields/traa_Which_Program_did_you_apply_to__c.field-meta.xml
<CustomField>
    <fullName>traa_Which_Program_did_you_apply_to__c</fullName>
    <description>For which program did you apply the application?</description>
    <inlineHelpText>For which program did you apply the application?</inlineHelpText>
    <label>Which Program did you apply to?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>