unpackaged/main/default/objects/hed__Application__c/recordTypes/Academic_Application.recordType-meta.xml
<RecordType>
    <fullName>Academic_Application</fullName>
    <active>true</active>
    <label>Academic Application</label>
</RecordType>