unpackaged/main/default/objects/hed__Application__c/recordTypes/EDA_Application.recordType-meta.xml
<RecordType>
    <fullName>EDA_Application</fullName>
    <active>false</active>
    <label>EDA Application</label>
</RecordType>